<resources>
    <string name="app_name">LooYou</string>

    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Повторите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_via">Войти через</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="next">Продолжить</string>
    <string name="back">Назад</string>
    <string name="send_code">Запросить код</string>
    <string name="password_error">Пароли не совпадают!</string>
    <string name="password_error_lenght">Пароли должен содержать больше 6 символов!</string>

    <string name="polici">Нажимая «Продолжить», вы принимаете пользовательское соглашение и политику конфиденциальности</string>
    <string name="code_title_text">Введите код отправленный на Email</string>
    <string name="create_a_password">Придумайте пароль</string>
    <string name="resent_the_code_after">%s</string>


    <!--    Profile -->
    <string name="name">Имя</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="birthday">Дата рождения</string>
    <string name="study">Образование</string>
    <string name="status">Статус</string>
    <string name="about_me">О себе</string>
    <string name="hobby">Увлечения</string>
    <string name="music">Музыка</string>
    <string name="films">Фильмы</string>
    <string name="books">Книги</string>
    <string name="games">Игры</string>
    <string name="tell_more_about_yourself">Расскажите больше о себе</string>

    <string name="hobby_s">Хобби: %s</string>
    <string name="music_s">Музыка: %s</string>
    <string name="films_s">Фильмы: %s</string>
    <string name="books_s">Книги: %s</string>
    <string name="games_s">Игры: %s</string>
    <string name="about_me_s">О себе: %s</string>
    <string name="birthday_s">Дата рождения: %s</string>
    <string name="study_s">Образование: %s</string>

    <!--    Bottom menu -->
    <string name="home">Лента</string>
    <string name="profile">Профиль</string>
    <string name="messenger">Чат</string>
    <string name="posts">Посты</string>

    <integer name="com_vk_sdk_AppId">8193627</integer>

    <string-array name="login_items">
        <item>Авторизация</item>
        <item>Регистрация</item>
    </string-array>

    <string-array name="posts_items">
        <item>Поиск</item>
        <item>Знакомства</item>
        <item>Интересы</item>
    </string-array>

</resources>