<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_post_background"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:tint="@color/blue_color"
            app:srcCompat="@drawable/ic_close" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:text="@string/profile" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/success_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:tint="@color/orange_color"
            app:srcCompat="@drawable/ic_check" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genderTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genderTitle"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/male"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/female"/>
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/birthdayTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthdayTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/studyTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:text="@string/study"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthday" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/study"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/studyTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/statusTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/study" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/status"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statusTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/aboutMe_title"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status"
                android:text="@string/about_me" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hobbyTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutMe_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hobby"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hobbyTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/musicTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/music"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hobby" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/music"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/musicTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/filmsTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/films"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/films"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filmsTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/booksTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/books"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/films" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/books"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/booksTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gamesTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/games"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/books" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/games"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamesTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/aboutTitle"
                style="@style/ProfileMiniTitleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/tell_more_about_yourself"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/games" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/about"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutTitle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/LoginTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>