<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/LoginTextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/LoginTextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn_button"
        style="@style/DefaultButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="20dp" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:indeterminateTint="@color/tab_background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/signIn_button"
        app:layout_constraintEnd_toEndOf="@id/signIn_button"
        app:layout_constraintStart_toStartOf="@id/signIn_button"
        app:layout_constraintTop_toTopOf="@id/signIn_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/orange_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginVia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/login_via"
        android:textColor="@color/blue_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/vk"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/google"
        app:layout_constraintStart_toStartOf="@id/loginVia"
        app:layout_constraintTop_toBottomOf="@id/loginVia"
        app:srcCompat="@drawable/vk_logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/google"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/loginVia"
        app:layout_constraintStart_toEndOf="@id/vk"
        app:layout_constraintTop_toBottomOf="@id/loginVia"
        app:srcCompat="@drawable/google_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>